[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/misc/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/m5x7/m5x7.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/m5x7/TextTheme.tres" type="Theme" id=3]
[ext_resource path="res://other_scenes/settings/VideoSettings.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/m5x7/BigTextTheme.tres" type="Theme" id=5]
[ext_resource path="res://fonts/m5x7/SmallTextTheme.tres" type="Theme" id=6]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.521569, 0.521569, 0.521569, 1 )

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false

[sub_resource type="StyleBoxFlat" id=7]
draw_center = false

[sub_resource type="StyleBoxFlat" id=8]
draw_center = false

[sub_resource type="StyleBoxFlat" id=9]
draw_center = false

[sub_resource type="StyleBoxFlat" id=10]
draw_center = false

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.121569, 0.121569, 0.121569, 0.478431 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 256.0
margin_bottom = 64.0

[node name="GameName" type="Label" parent="HBoxContainer"]
margin_right = 378.0
margin_bottom = 76.0
theme = ExtResource( 5 )
text = "Project Evie"

[node name="GameVersion" type="Label" parent="HBoxContainer"]
margin_left = 382.0
margin_top = 25.0
margin_right = 458.0
margin_bottom = 51.0
theme = ExtResource( 6 )
text = "Version"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -136.0
margin_right = 128.0
__meta__ = {
"_edit_group_": true
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 116.0
margin_bottom = 38.0
focus_neighbour_top = NodePath("../QuitButton")
theme = ExtResource( 3 )
custom_colors/font_color_focus = Color( 0, 0.603922, 0.839216, 1 )
custom_colors/font_color_hover = Color( 0.0745098, 0.737255, 1, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Start"
flat = true
align = 0

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 116.0
margin_bottom = 80.0
custom_colors/font_color_focus = Color( 0, 0.603922, 0.839216, 1 )
custom_colors/font_color_hover = Color( 0.0745098, 0.737255, 1, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Options"
flat = true
align = 0

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 116.0
margin_bottom = 122.0
focus_neighbour_bottom = NodePath("../StartButton")
custom_colors/font_color_focus = Color( 0, 0.603922, 0.839216, 1 )
custom_colors/font_color_hover = Color( 0.0745098, 0.737255, 1, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Quit"
flat = true
align = 0

[node name="CreditsButton" type="Button" parent="."]
margin_left = 912.0
margin_top = 560.0
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 3 )
custom_colors/font_color_focus = Color( 0, 0.603922, 0.839216, 1 )
custom_colors/font_color_hover = Color( 0.0745098, 0.737255, 1, 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "Credits"
flat = true
align = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VideoSettings" parent="CanvasLayer" instance=ExtResource( 4 )]
visible = false
custom_styles/panel = SubResource( 11 )

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
